--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-# db.jdbc.url=jdbc:h2:mem:database
-# db.jdbc.driverClassName=org.h2.Driver
-# db.jdbc.username=someUser
-# db.jdbc.password=somePassword
-# db.createDatabaseStructure=true
-# db.showSql=false
+spring.datasource.url=jdbc:h2:mem:database;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+spring.datasource.driver-class-name=org.h2.Driver
