--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url=jdbc:h2:mem:database;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.h2.Driver
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/todos
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
